--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.6.7'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id "com.google.cloud.artifactregistry.gradle-plugin" version "2.1.4"
 	id 'java'
 	id 'jacoco'
 }
@@ -10,6 +11,9 @@ version = '0.0.1-SNAPSHOT'
 
 repositories {
 	mavenCentral()
+	maven {
+		url "artifactregistry://us-central1-maven.pkg.dev/team-ipg-wf/ipg-repo"
+	}
 }
 
 ext {
@@ -18,6 +22,8 @@ ext {
 }
 
 dependencies {
+
+	implementation('org.ipg.common:common-data:1.0.1')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	// GCP basics and Pub/Sub Events dependencies
